# Railway_Optimizer

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_visualizer.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/Freight/: placeholder.txt
data/Route_Station/: RouteSttnInfo.xlsx - KTV-PSA.csv  RouteSttnInfo.xlsx - PSA-KTV.csv  placeholder.txt
data/infrastructure/: KTV-PSA-Infra.xlsx - BLOCKSCTN.csv  KTV-PSA-Infra.xlsx - BLOCKSCTNLINE.csv  KTV-PSA-Infra.xlsx - Connections.csv  KTV-PSA-Infra.xlsx - Platform.csv  KTV-PSA-Infra.xlsx - STATION.csv  KTV-PSA-Infra.xlsx - STTNLINE.csv  KTV-PSA-Infra.xlsx - Stationposition.csv  placeholder.txt
data/passenger/: KTV_PSA_Passenger_Schedule.xlsx - Curvature (KTV_PSA).csv  KTV_PSA_Passenger_Schedule.xlsx - Curvature (PSA-KTV).csv  KTV_PSA_Passenger_Schedule.xlsx - GRADIENT (KTV-PSA).csv  KTV_PSA_Passenger_Schedule.xlsx - GRADIENT (PSA-KTV).csv  KTV_PSA_Passenger_Schedule.xlsx - PSR (KTV-PSA).csv  KTV_PSA_Passenger_Schedule.xlsx - PSR (PSA-KTV).csv  KTV_PSA_Passenger_Schedule.xlsx - SCHEDULE-KTV-PSA.csv  (+2 more)
doc/: architecture.md  data_dictionary.md
ktv_psa_scheduler/: __init__.py  _native.cp312-win_amd64.pyd  ktv_psa_scheduler.cp312-win_amd64.pyd  model.py  orchestrator.py  pipeline.py  visualizer.py
md_file/: dataanalysis.md  implementation_order.md  implementation_plan.md
src/: error.rs  lib.rs  masking.rs  physics.rs
tests/: test_model.py  test_native_smoke.py  test_orchestrator.py  test_pipeline.py
