[package]
name = "ktv_psa_scheduler"
version = "0.1.0"
edition = "2024"

[lib]
name = "ktv_psa_scheduler"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
